[package]
name = "hangman-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Waffle <72278085+W4ff1e@users.noreply.github.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.2", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }
include_dir = "0.7.3"
rand = "0.8.5"
